--- a/public/elements/index.html
+++ b/public/elements/index.html
@@ -17,7 +17,7 @@
 -->
 
 <!DOCTYPE html>
-<html lang="en" class="has-navbar-fixed-top" id="main">
+<html lang="en" class="has-navbar-fixed-top" style="overflow-x: hidden;" id="main">
   <head id="foundation">
     <meta charset="utf-8">
     <link rel="icon" href="./assets/icon.webp">
@@ -38,8 +38,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@800&display=swap" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body style="background-color: #ffffff; scroll-margin-top: 60px;" id="mainContent">
-    <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation" style="background-color: rgba(255, 255, 255, 0.80); backdrop-filter: blur(56px); -webkit-backdrop-filter: blur(56px); box-shadow: 0 2px 2px 0 rgba(50, 34, 56, 0.2);">
+  <body style="background-color: rgba(0, 0, 0, 0); scroll-margin-top: 60px;" id="mainContent">
+    <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation" style="backdrop-filter: blur(56px); -webkit-backdrop-filter: blur(56px); box-shadow: 0 2px 2px 0 rgba(50, 34, 56, 0.2);">
       <div class="navbar-brand">
         <div class="navbar-item" style="line-height: 15px;">
               <a style="font-weight: 900; color: black; text-shadow: -0.5px 0.5px grey;" href="#mainContent"><span id="title1stLine">{{navTitle1st}}</span><br><span id="title2ndLine">{{navTitle2nd}}</span></a>
@@ -50,10 +50,10 @@
   </nav>
   <section class="section" style="align-content: center;" id="mainSection"></section>
   </body>
-  <footer class="footer" style="background-color: #f5f5f5;">
+  <footer class="footer">
     <div id="footerContainer" class="content has-text-centered">
       <article id="footerNotices" class="message is-link" style="width: 75%; position: relative; left: 50%; transform: translate(-50%, 0%); display: {{extraInfoVisibility}};" id="extraInfo">
-        <div class="message-body" style="background-color: rgb(219, 219, 219); border-left-style: none; font-size: small; font-weight: 700; color: black;">
+        <div class="message-body" style="border-left-style: none; font-size: small; font-weight: 700; color: black;" id="extraInfoSuperContainer">
           <ol id="extraInfoContainer" style="list-style-position: inside; margin-left: -2px; position: relative; bottom: 4px;">
           </ol>
         </div>
