--- a/public/elements/sections/container.html
+++ b/public/elements/sections/container.html
@@ -18,7 +18,8 @@
 
 <div class="column">
     <section style="scroll-margin-top: 102px;" id="{{id}}">
-        <h2 class="subtitle" style="font-family: Arial, Helvetica, sans-serif; font-display: swap; font-size: 28px; font-weight: 900;">{{name}}<hr></h2>
+        <h2 class="subtitle" style="font-family: Arial, Helvetica, sans-serif; font-display: swap; font-size: 28px; font-weight: 900;">{{name}}</h2>
+        <hr>
         <div id="{{id}}Container"></div>
     </section>
  </div>
