--- a/public/elements/foundation.html
+++ b/public/elements/foundation.html
@@ -84,11 +84,50 @@ align-content: initial;
   }
 }
 
+@media (prefers-color-scheme: dark) {
+  html {
+    background-color: rgb(14, 14, 14) !important;
+  }
+  nav {
+    background-color: rgba(24, 24, 24, 0.8) !important;
+  }
+  footer {
+    background-color: black !important;
+  }
+  #extraInfoSuperContainer {
+    background-color: rgb(182, 182, 182) !important;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  html {
+    background-color: rgb(255, 255, 255) !important;
+  }
+  nav {
+    background-color: rgba(255, 255, 255, 0.80) !important;
+  }
+  footer {
+    background-color: #f5f5f5 !important;
+  }
+  #extraInfoSuperContainer {
+    background-color: rgb(219, 219, 219) !important;
+  }
+}
+
 .placeholder {
 position: absolute;
 left: 50%;
 top: 50%;
 transform: translate(-50%, -50%);
+}
+
+.subtitle {
+  margin-bottom: -22px !important;
+}
+
+h1, h2, span {
+  mix-blend-mode: difference;
+  filter: invert(100%);
 }
 
 div .productContainer {
