--- a/public/elements/index.html
+++ b/public/elements/index.html
@@ -20,13 +20,13 @@
 <html lang="en" class="has-navbar-fixed-top" style="overflow-x: hidden;" id="main">
   <head id="foundation">
     <meta charset="utf-8">
-    <link rel="icon" href="./assets/icon.webp">
-    <link rel="shortcut icon" href="./assets/icon.png">
+    <link rel="icon" href="">
+    <link rel="shortcut icon" href="">
     <title>{{title}}</title>
-    <meta name="description" content="Description about the place">
+    <meta name="description" content="">
     <meta property="og:title" content="{{title}}"/>
-    <meta property="og:description" content="Description about the place">
-    <meta property="og:image" content="./assets/icon.png">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="">
     <meta property="og:type" content="website"/>
     <meta property="og:url" content=""/>
     <meta property="og:locale" content="en_US"/>
