Added a setup manager

--- a/public/elements/setup/foundation.html
+++ b/public/elements/setup/foundation.html
@@ -44,6 +44,11 @@
 
     #subtitle {
       font-size: large;
+      font-weight: bold;
+    }
+
+    #masterKeyContainer {
+      display: none;
     }
 
     h1, h2 {
