Added the ability to store a session token Improved setup interface

--- a/public/elements/setup/setup.html
+++ b/public/elements/setup/setup.html
@@ -37,6 +37,9 @@
         <div class="form-group" id="titleContainer">
           <label for="title" class="required">Website's title</label>
           <input type="text" class="form-control" name="title" placeholder="Title" required="required" id="titleInput">
+          <div class="form-text">
+            This will be the website's title
+          </div>
         </div>
         <div class="form-group" id="nameContainer">
           <label for="name" class="required">Local's name</label>
