--- a/public/elements/setup/foundation.html
+++ b/public/elements/setup/foundation.html
@@ -27,19 +27,13 @@
         transform: translateY(-50%);
         backdrop-filter: blur(25px) saturate(0%);
         -webkit-backdrop-filter: blur(25px) saturate(0%);
-        background-color: rgba(17, 25, 40, 0.75);
         border-radius: 12px;
-        border: 1px solid rgba(255, 255, 255, 0.125);
     }
 
     #title {
         font-weight: bold;
-        background-image: linear-gradient(45deg, rgb(146, 249, 123), rgb(101, 75, 247));
-        background-image: -webkit-linear-gradient(45deg, rgb(146, 249, 123), rgb(101, 75, 247));
         color: transparent;
         background-clip: text;
-        mix-blend-mode: normal;
-        filter: invert(0%);
     }
 
     #subtitle {
@@ -51,6 +45,19 @@
       display: none;
     }
 
+    .form-text {
+      font-size: small;
+      font-weight: 300;
+    }
+
+    .btn {
+      font-weight: bold;
+      background-color: rgb(169, 199, 234) !important;
+      border-color: rgba(155, 170, 207, 0.75) !important;
+      backdrop-filter: blur(25px) saturate(0%);
+      -webkit-backdrop-filter: blur(25px) saturate(0%);
+    }
+
     h1, h2 {
         text-align: center;
     }
@@ -59,7 +66,7 @@
       width: 100%;
     }
 
-    h1, h2, hr, label, input, .form-text {
+    hr {
         mix-blend-mode: difference;
         filter: invert(100%);
     }
@@ -78,11 +85,53 @@
       html {
         background-color: rgb(14, 14, 14) !important;
       }
+      label, .form-text {
+        color: rgb(169, 199, 234, 0.75);
+      }
+      .form-control {
+        background-color: rgba(255, 255, 255, 0.75);
+        border-color: rgb(241, 241, 241);
+        filter: invert(100%);
+      }
+      .btn {
+        color: rgb(4, 57, 77) !important;
+      }
+      #setupContainer {
+        background-color: rgba(17, 25, 40, 0.75);
+        border: 1px solid rgba(255, 255, 255, 0.125);
+      }
+      #title {
+        background-image: linear-gradient(45deg, rgb(169, 199, 234), rgb(131, 210, 255));
+        background-image: -webkit-linear-gradient(45deg, rgb(169, 199, 234), rgb(131, 210, 255));
+      }
+      #subtitle {
+        color: rgb(169, 199, 234, 0.75);
+      }
     }
     
     @media (prefers-color-scheme: light) {
       html {
         background-color: rgb(255, 255, 255) !important;
+      }
+      label, .form-text {
+        color: rgba(0, 0, 0, 0.75);
+      }
+      .form-control {
+        background-color: rgba(255, 255, 255, 0.75);
+      }
+      .btn {
+        color: rgb(99, 111, 149) !important;
+      }
+      #setupContainer {
+        background-color: rgba(216, 228, 238, 0.75);
+        border: 1px solid rgba(0, 0, 0, 0.125);
+      }
+      #title {
+        background-image: linear-gradient(45deg, rgba(7, 43, 116, 0.75), rgba(17, 70, 63, 0.75));
+        background-image: -webkit-linear-gradient(45deg, rgba(7, 43, 116, 0.75), rgba(17, 70, 63, 0.75));
+      }
+      #subtitle {
+        color: rgb(7, 43, 116, 0.75);
       }
     }
 </style>
