--- a/public/elements/setup/foundation.html
+++ b/public/elements/setup/foundation.html
@@ -66,6 +66,10 @@
       width: 100%;
     }
 
+    input {
+        font-size: 16px;
+    }
+
     hr {
         mix-blend-mode: difference;
         filter: invert(100%);
