--- a/public/elements/setup/scripts.html
+++ b/public/elements/setup/scripts.html
@@ -37,7 +37,7 @@
             document.getElementById("masterKeyInput").setAttribute("value", data["masterKey"]);
             document.getElementById("submitButton").onclick = function() {
               event.preventDefault();
-              if (confirm("Are you sure?") == true) {
+              if (confirm("Are you sure you want to continue? You won't be able to obtain the master key later!") == true) {
                 unloadConfirmedByUser = true;
                 location.reload();
               }
