--- a/public/main.html
+++ b/public/main.html
@@ -53,10 +53,7 @@
   <footer class="footer">
     <div id="footerContainer" class="content has-text-centered">
       <article id="footerNotices" class="message is-link" style="width: 75%; position: relative; left: 50%; transform: translate(-50%, 0%); display: {{extraInfoVisibility}};" id="extraInfo">
-        <div class="message-body" style="border-left-style: none; font-size: small; font-weight: 700; color: black;" id="extraInfoSuperContainer">
-          <ol id="extraInfoContainer" style="list-style-position: inside; margin-left: -2px; position: relative; bottom: 4px;">
-          </ol>
-        </div>
+        <ol id="extraInfoContainer" style="list-style-position: inside; margin: 0px;"></ol>
       </article>
       <div class="has-text-white" style="font-display: swap; position: relative; line-height: 22px; top: 12px;">
         <span style="font-size: 36px; font-weight: 900; color: black; line-height: 32px;">{{nameFooter}}</span>
