--- a/pages/scripts.html
+++ b/pages/scripts.html
@@ -18,16 +18,8 @@
 
 <script defer src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
 <script defer>
-    function switchVisibility2Placeholder(id) {
-      document.getElementById("imagePlaceholderProduct" + id).style.display = 'block';
-      return;
-    }
+    const switchVisibility2Placeholder = (id) => document.getElementById("imagePlaceholderProduct" + id).style.display = 'block';
 
-    window.onload = function() {
-      document.body.scrollTop = Cookies.get('scrollingPosition');
-    }
-
-    window.onbeforeunload = function(e) {
-      document.cookie = `scrollingPosition=${document.body.scrollTop}; max-age=7200`;
-    };
+    window.onload = () => document.body.scrollTop = Cookies.get('scrollingPosition');
+    window.onbeforeunload = () => document.cookie = `scrollingPosition=${document.body.scrollTop}; max-age=7200`;
   </script>
