--- a/pages/setup/foundation.html
+++ b/pages/setup/foundation.html
@@ -41,7 +41,7 @@
       font-weight: bold;
     }
 
-    #masterKeyContainer {
+    #masterKeyContainer, #idContainer {
       display: none;
     }
 
