--- a/pages/setup/setup.html
+++ b/pages/setup/setup.html
@@ -33,26 +33,26 @@
       <h1 id="title">SeekHub</h1>
       <hr>
       <h2 id="subtitle">Hi! Now you'll be asked some info to setup your brand new menu website!</h2>
-      <form onsubmit="return finishSetup();" id="setup">
+      <form onsubmit="return false;" id="setup">
+        <div class="form-group" id="nameContainer">
+          <label for="name" class="required">Local's name</label>
+          <input type="text" class="form-control" name="name" placeholder="Name" required="required" id="nameInput" onchange="syncElementInput('nameInput', 'titleInput');">
+          <div class="form-text">
+            This will be your website's name
+          </div>
+        </div>
         <div class="form-group" id="titleContainer">
           <label for="title" class="required">Website's title</label>
           <input type="text" class="form-control" name="title" placeholder="Title" required="required" id="titleInput">
           <div class="form-text">
-            This will be the website's title
-          </div>
-        </div>
-        <div class="form-group" id="nameContainer">
-          <label for="name" class="required">Local's name</label>
-          <input type="text" class="form-control" name="name" placeholder="Name" required="required" id="nameInput">
-          <div class="form-text">
-            This will show up in the website's footer
+            This will be the website's title that will show up at people's browsers
           </div>
         </div>
         <div class="form-group" id="navTitleContainer">
           <label for="navbarTitle" class="required">Navbar title</label>
           <input style="margin-bottom: 8px;" type="text" class="form-control" name="navTitle" placeholder="Navbar title" required="required" id="navTitleInput">
           <div class="form-text">
-            This will show up in the navbar
+            This will show up as the navbar title
           </div>
         </div>
         <div class="form-group" id="legalNoticeContainer">
@@ -62,6 +62,13 @@
             This will show up in the website's footer, just under the local's name
           </div>
         </div>
+        <div class="form-group" id="idContainer">
+          <label for="key" class="">Website's ID</label>
+          <input readonly type="text" class="form-control" name="id" placeholder="Not generated yet" value="" id="idInput">
+          <div class="form-text" id="idInstruction">
+            This is an unique identifier for your website
+          </div>
+        </div>
         <div class="form-group" id="masterKeyContainer">
           <label for="key" class="">Master Key</label>
           <input readonly type="text" class="form-control" name="masterKey" placeholder="Not generated yet" value="" id="masterKeyInput">
@@ -69,7 +76,7 @@
             You'll have to use this key if you want to customize the website after the setup
           </div>
         </div>
-        <input class="btn btn-primary btn-block" type="submit" value="Go!" id="submitButton">
+        <input class="btn btn-primary btn-block" type="submit" value="Go!" id="submitButton" onclick="finishSetup();">
       </form>
     </div>
   </body>
