--- a/pages/manage/foundation.html
+++ b/pages/manage/foundation.html
@@ -17,7 +17,7 @@
 -->
 
 <style>
-    #setupContainer {
+    #loginContainer {
       position: relative;
       width: 35%;
       height: min-content;
@@ -39,10 +39,6 @@
     #subtitle {
       font-size: large;
       font-weight: bold;
-    }
-
-    #masterKeyContainer, #idContainer {
-      display: none;
     }
 
     .form-text {
@@ -76,7 +72,7 @@
     }
 
     @media screen and (max-width: 1024px) {
-      #setupContainer {
+      #loginContainer {
         position: relative;
         width: 85%;
         top: 0%;
@@ -100,7 +96,7 @@
       .btn {
         color: rgb(4, 57, 77) !important;
       }
-      #setupContainer {
+      #loginContainer {
         background-color: rgba(17, 25, 40, 0.75);
         border: 1px solid rgba(255, 255, 255, 0.125);
       }
@@ -126,7 +122,7 @@
       .btn {
         color: rgb(99, 111, 149) !important;
       }
-      #setupContainer {
+      #loginContainer {
         background-color: rgba(216, 228, 238, 0.75);
         border: 1px solid rgba(0, 0, 0, 0.125);
       }
