--- a/pages/foundation.html
+++ b/pages/foundation.html
@@ -17,190 +17,219 @@
 -->
 
 <style>
-#mainSection {
-  position: relative;
-  margin-top: -26px;
-}
-#navbarItemContainer {
-align-content: initial;
-}
-#footerNotices {
-  background-color: rgba(0, 0, 0, 0);
-  width: 75%;
-}
-.navbar-item.resize {
-  text-align: center !important;
-  font-weight: 600 !important;
-}
-.navbar-item:hover {
-  color: black !important;
-  background-color: rgba(0, 0, 0, 0) !important;
-}
+  h1, h2, li, span {
+    mix-blend-mode: difference;
+    filter: invert(100%);
+  }
 
-@media screen and (max-width: 1024px) {
+  nav {
+    backdrop-filter: blur(56px);
+    -webkit-backdrop-filter: blur(56px);
+    box-shadow: 0 2px 2px 0 rgba(50, 34, 56, 0.2);
+  }
+
+  hr {
+    height: 1px;
+  }
+
+  li {
+    font-weight: 600;
+  }
+  li span {
+    color: grey;
+    font-weight: 500;
+  }
+
+  h2 hr {
+    margin-top: 0px;
+  }
+
+  #navbarTitle {
+    font-weight: 900;
+    color: black;
+    text-shadow: -0.5px 0.5px grey;
+  }
+
   #mainSection {
     position: relative;
     margin-top: -26px;
   }
-  #navbarContainer {
-    display: flex;
-  }
-  #footerNotices {
-    width: 75%;
-  }
-  .navbar {
-    display: flex;
-  }
-  .navbar-item.resize {
-      text-align: center;
-      font-weight: 400;
-      font-size: small;
-      padding-top: 17.5px;
-  }
-}
 
-@media screen and (max-width: 612px) {
-  #mainSection {
-    position: relative;
-    margin-top: -32px;
-  }
   #navbarItemContainer {
-    align-content: center;
+    align-content: initial;
   }
-  #footerNotices {
-    width: 85%;
+
+  #extraInfo {
+    background-color: rgba(0, 0, 0, 0);
+    width: 75%;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0%);
   }
+
   .navbar-item.resize {
-      display: none;
+    text-align: center !important;
+    font-weight: 600 !important;
   }
-}
 
-@media (prefers-color-scheme: dark) {
-  html {
-    background-color: rgb(14, 14, 14) !important;
+  .navbar-item:hover {
+    color: black !important;
+    background-color: rgba(0, 0, 0, 0) !important;
   }
-  nav {
-    background-color: rgba(24, 24, 24, 0.8) !important;
+
+  .footer {
+    padding: 3rem 2rem 4rem !important;
   }
-  footer {
-    background-color: black !important;
+
+  .placeholder {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
   }
-}
 
-@media (prefers-color-scheme: light) {
-  html {
-    background-color: rgb(255, 255, 255) !important;
+  .subtitle {
+    margin-bottom: -22px !important;
   }
-  nav {
-    background-color: rgba(255, 255, 255, 0.80) !important;
+
+  .manage {
+    font-weight: 300;
+    line-height: 14px;
+    margin-top: 36px;
   }
-  footer {
-    background-color: #f5f5f5 !important;
+
+  div .productContainer {
+    position: relative;
+    display: flex;
+    top: -20px;
+    min-width: 300px;
   }
-}
 
-.placeholder {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
+  div .productContainer > .imageContainer {
+    background-color: rgb(219, 219, 219); 
+    float: left; 
+    width: 70px; 
+    height: 70px; 
+    position: absolute; 
+    top: 6px; 
+    border-radius: 12px;
+  }
 
-.subtitle {
-  margin-bottom: -22px !important;
-}
+  div .productContainer > .infoContainer {
+    position: relative; 
+    top: 2px; 
+    margin-left: 82.5px;
+  }
 
-h1, h2, li, span {
-  mix-blend-mode: difference;
-  filter: invert(100%);
-}
+  .infoContainer > div > .productName {
+    color:rgb(20, 20, 20); 
+    font-size: x-large;
+    font-weight: 900;
+    margin-right: 2px;
+  }
 
-hr {
-  height: 1px;
-}
+  .infoContainer > div > .productName {
+    color:rgb(20, 20, 20);
+    font-size: x-large;
+    font-weight: 900;
+    margin-right: 2px;
+  }
 
-li {
-  font-weight: 600;
-}
-li span {
-  color: grey;
-  font-weight: 500;
-}
+  .infoContainer > div > .productPrice {
+    position: relative;
+    font-size: 18px;
+    font-family: 'Gemunu Libre', sans-serif;
+    font-weight: 800;
+    top: -2px;
+  }
 
-h2 hr {
-  margin-top: 0px;
-}
+  .infoContainer > .productDescription {
+    font-size: medium;
+    font-weight: 400;
+    position: relative;
+    top: -4px;
+  }
 
-div .productContainer {
-position: relative;
-display: flex;
-top: -20px;
-min-width: 300px;
-}
+  .infoContainer > .productAllergens {
+    font-size: small;
+    font-weight: 300;
+    position: relative;
+    top: -8px;
+  }
 
-div .productContainer > .imageContainer {
-background-color: rgb(219, 219, 219); 
-float: left; 
-width: 70px; 
-height: 70px; 
-position: absolute; 
-top: 6px; 
-border-radius: 12px;
-}
+  .infoContainer > div > .productName {
+    color:rgb(20, 20, 20);
+    font-size: x-large;
+    font-weight: 900;
+    margin-right: 2px;
+  }
 
-div .productContainer > .infoContainer {
-position: relative; 
-top: 2px; 
-margin-left: 82.5px;
-}
+  .productImage {
+    border-radius: 12px;
+    width: 70px;
+    height: 70px;
+    image-rendering: optimizeSpeed;
+  }
 
-.infoContainer > div > .productName {
-color:rgb(20, 20, 20); 
-font-size: x-large; 
-font-weight: 900; 
-margin-right: 2px;
-}
+  @media screen and (max-width: 1024px) {
+    #mainSection {
+      position: relative;
+      margin-top: -26px;
+    }
+    #navbarContainer {
+      display: flex;
+    }
+    #footerNotices {
+      width: 75%;
+    }
+    .navbar {
+      display: flex;
+    }
+    .navbar-item.resize {
+        text-align: center;
+        font-weight: 400;
+        font-size: small;
+        padding-top: 17.5px;
+    }
+  }
 
-.infoContainer > div > .productName {
-color:rgb(20, 20, 20); 
-font-size: x-large; 
-font-weight: 900; 
-margin-right: 2px;
-}
+  @media screen and (max-width: 612px) {
+    #mainSection {
+      position: relative;
+      margin-top: -32px;
+    }
+    #navbarItemContainer {
+      align-content: center;
+    }
+    #footerNotices {
+      width: 85%;
+    }
+    .navbar-item.resize {
+        display: none;
+    }
+  }
 
-.infoContainer > div > .productPrice {
-position: relative; 
-font-size: 18px; 
-font-family: 'Gemunu Libre', sans-serif; 
-font-weight: 800; 
-top: -2px;
-}
+  @media (prefers-color-scheme: dark) {
+    html {
+      background-color: rgb(14, 14, 14) !important;
+    }
+    nav {
+      background-color: rgba(24, 24, 24, 0.8) !important;
+    }
+    footer {
+      background-color: black !important;
+    }
+  }
 
-.infoContainer > .productDescription {
-font-size: medium; 
-font-weight: 400; 
-position: relative; 
-top: -4px;
-}
-
-.infoContainer > .productAllergens {
-font-size: small;
-font-weight: 300;
-position: relative; 
-top: -8px;
-}
-
-.infoContainer > div > .productName {
-color:rgb(20, 20, 20); 
-font-size: x-large; 
-font-weight: 900; 
-margin-right: 2px;
-}
-
-.productImage {
-border-radius: 12px;
-width: 70px; 
-height: 70px; 
-image-rendering: optimizeSpeed;
-}
+  @media (prefers-color-scheme: light) {
+    html {
+      background-color: rgb(255, 255, 255) !important;
+    }
+    nav {
+      background-color: rgba(255, 255, 255, 0.80) !important;
+    }
+    footer {
+      background-color: #f5f5f5 !important;
+    }
+  }
 </style>
