Improved config handling Improved setup's interface logic

--- a/pages/manage/main.html
+++ b/pages/manage/main.html
@@ -32,7 +32,7 @@
     <div id="loginContainer">
       <h1 id="title">Login</h1>
       <hr style="margin-bottom: 2rem;">
-      <form onsubmit="login();" id="login">
+      <form id="login">
         <div class="form-group" id="masterKeyContainer">
           <input type="password" class="form-control" name="masterKey" placeholder="Master Key" required="required" id="masterKeyInput">
         </div>
