--- a/pages/setup/foundation.html
+++ b/pages/setup/foundation.html
@@ -45,6 +45,13 @@
       display: none;
     }
 
+    #opps {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
     .form-text {
       font-size: small;
       font-weight: 300;
@@ -111,6 +118,9 @@
       #subtitle {
         color: rgb(169, 199, 234, 0.75);
       }
+      #opps {
+        color: white;
+      }
     }
     
     @media (prefers-color-scheme: light) {
@@ -136,6 +146,9 @@
       }
       #subtitle {
         color: rgb(7, 43, 116, 0.75);
+      }
+      #opps {
+        color: black;
       }
     }
 </style>
