Uncommmented code within the main page

--- a/pages/main.html
+++ b/pages/main.html
@@ -61,9 +61,9 @@
         <span style="font-size: 12px; font-weight: 300; color: black;">{{legalNotice}}</span>
     </div>
     <div class="manage">
-      <a style="font-size: 12px; color: grey;" href="/manage"><span>Manage</span></a>
-      <!--<br>
-      <span style="font-size: 8px; color: grey;">{{id}}</span>-->
+      <!--<a style="font-size: 12px; color: grey;" href="/manage"><span>Manage</span></a>
+      <br>-->
+      <span style="font-size: 8px; color: grey;">{{id}}</span>
     </div>
   </footer>
 </html>
